--- a/Manish/pricing.html
+++ b/Manish/pricing.html
@@ -995,7 +995,7 @@
                         back-and-forth</p>
                 </div>
                 <div class="button-container">
-                    <a href="#" class="signup-free--button">Sign up for free</a>
+                    <a href="#" class="signup-free-button">Sign up for free</a>
                     <a href="#" class="sales-button">Talk to sales</a>
                 </div>
             </div>
