image card section

--- a/resources-Pushkin/resources.html
+++ b/resources-Pushkin/resources.html
@@ -66,7 +66,7 @@
           <p class="imageCard-details">The State of Scheduling</p>
           <button class="imageCard-button">
             <span>Get the report </span>
-            <i class="material-icons">arrow_forward</i>
+            <i class="material-icons"> arrow_forward</i>
           </button>
         </div>
       </a>
@@ -75,15 +75,267 @@
     </section>
     <section class="resourceHubBlogPost">
       <div class="resource-sub-navbar">
-        <a href="">E-books & Guides</a>
-        <a href="">Webinars</a>
-        <a href="">Customer Stories</a>
-        <a href="">Blog</a>
+        <a href="#ebook">E-books & Guides</a>
+        <a href="#webinar">Webinars</a>
+        <a href="#customerStories">Customer Stories</a>
+        <a href="#blog">Blog</a>
         <a href="">Video tutorials</a>
         <a href="">Help Center</a>
       </div>
+       <hr>
+      <div class="blog-post-content">
+        <div class="ebooks" id="ebook">
+          <div class="ebook-title-page-no">
+            <div class="ebook-title">
+              <h4>E-books and Guides</h4>
+            </div>
+            <div class="page-no">
+              <span class="curr-page">1 </span>
+              <span class="total-pages"> / 10</span>
+              <i class="material-icons"> arrow_forward</i>
+            </div>
+          </div>
+          <div class="image-card-content">
+            <a href="" class="imageCard imagecard2">
+              <img
+                src="https://images.ctfassets.net/k0lk9kiuza3o/1SPccwcNsy9avdqqWMpKCR/38cac10fa059604327766c6466af4d08/-GATED-_2023_Gartner_Hype_Cycle_Report-1.png?q=85&fm=webp"
+                alt="E-Book"
+              />
+
+              <div class="imageCardDescription">
+                <p class="imageCard-title">e-book</p>
+                <p class="imageCard-details">
+                  2023 Gartner &reg; Hype Cycle &trade; for Digital Workplace
+                  Applications
+                </p>
+                <button class="imageCard-button">
+                  <span>Get the report </span>
+                  <i class="material-icons"> arrow_forward</i>
+                </button>
+              </div>
+            </a>
+            <a href="" class="imageCard imagecard2">
+              <img
+                src="https://images.ctfassets.net/k0lk9kiuza3o/6vf8hOVqtytIsdotDZoHKc/daa68c9eb2699a6331e8200437aeb35e/state-of-scheduling-hero.png?q=85&fm=webp"
+                alt="ReportCardImage"
+              />
+
+              <div class="imageCardDescription">
+                <p class="imageCard-title">Featured</p>
+                <p class="imageCard-details">The State of Scheduling</p>
+                <button class="imageCard-button">
+                  <span>Get the report </span>
+                  <i class="material-icons"> arrow_forward</i>
+                </button>
+              </div>
+            </a>
+            <a href="" class="imageCard imagecard2">
+              <img
+                src="https://images.ctfassets.net/k0lk9kiuza3o/7kFOyrJ1x17zp2tYFvvhRz/94e0a119a748d635e5a584a062eb9e24/-PDF-_Growth_Week_Survey_Findings__1_.png?q=85&fm=webp"
+              />
+
+              <div class="imageCardDescription">
+                <p class="imageCard-title">E-book</p>
+                <p class="imageCard-details">
+                  Growth Week 2023 Survey Findings
+                </p>
+                <button class="imageCard-button">
+                  <span>Get the report </span>
+                  <i class="material-icons"> arrow_forward</i>
+                </button>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="ebooks" id="webinar">
+          <div class="ebook-title-page-no">
+            <div class="ebook-title">
+              <h4>Webinars</h4>
+            </div>
+            <div class="page-no">
+              <span class="curr-page">1 </span>
+              <span class="total-pages"> / 14</span>
+              <i class="material-icons"> arrow_forward</i>
+            </div>
+          </div>
+          <div class="image-card-content">
+            <a href="" class="imageCard imagecard2">
+              <img
+                src="https://images.ctfassets.net/k0lk9kiuza3o/3KPypsOmC7UXzHuu9XOuBU/2c2735eafc5a8e4066d696427ca086ff/-Webinar-_Calendly_new_user_webinar.png?q=85&fm=webp"
+                alt="E-Book"
+              />
+
+              <div class="imageCardDescription">
+                <p class="imageCard-title">Webinar</p>
+                <p class="imageCard-details">
+                  Getting Started with Calendly
+                </p>
+                <button class="imageCard-button">
+                  <span>Register </span>
+                  <i class="material-icons"> arrow_forward</i>
+                </button>
+              </div>
+            </a>
+            <a href="" class="imageCard imagecard2">
+              <img
+                src="https://images.ctfassets.net/k0lk9kiuza3o/3Gof5hQ4RRQei67vVCpMaD/9017a172ffb01d4333a280005eb5f943/-Webinar-_How_Dartmouth_Supports_Student_Wellbeing_with_Calendly.png?q=85&fm=webp"
+                alt="ReportCardImage"
+              />
+
+              <div class="imageCardDescription">
+                <p class="imageCard-title">webinar</p>
+                <p class="imageCard-details">How Dartmouth Supports Student Wellbeing with Calendly</p>
+                <button class="imageCard-button">
+                  <span>Register </span>
+                  <i class="material-icons"> arrow_forward</i>
+                </button>
+              </div>
+            </a>
+            <a href="" class="imageCard imagecard2">
+              <img
+                src="https://images.ctfassets.net/k0lk9kiuza3o/25YtCtTdKhJVaR7tbqokUr/4c18b23ce4e1ff1898705af38b28168c/-Webinar-_How_Sales_Teams_Use_the_Right_Calendly_Plan_to_Hit_Revenue_Goals.png?q=85&fm=webp"
+              />
+
+              <div class="imageCardDescription">
+                <p class="imageCard-title">webinar</p>
+                <p class="imageCard-details">
+                  How Sales Teams Use the Right Calendly Plan to Hit Revenue Goals
+                </p>
+                <button class="imageCard-button">
+                  <span>Register </span>
+                  <i class="material-icons"> arrow_forward</i>
+                </button>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="ebooks" id="customerStories">
+          <div class="ebook-title-page-no">
+            <div class="ebook-title">
+              <h4>Customer Stories</h4>
+            </div>
+            <div class="page-no">
+              <span class="curr-page">1 </span>
+              <span class="total-pages"> / 12</span>
+              <i class="material-icons"> arrow_forward</i>
+            </div>
+          </div>
+          <div class="image-card-content">
+            <a href="" class="imageCard imagecard2">
+              <img
+                src="https://images.ctfassets.net/k0lk9kiuza3o/3xjaTAMVAi6kCvsuDSjz5W/2826ff6c8a628c898db0fae0b121c208/docusign-card-image.png?q=85&fm=webp"
+                alt="E-Book"
+              />
+
+              <div class="imageCardDescription">
+                <p class="imageCard-title">customer story</p>
+                <p class="imageCard-details">
+                  DocuSign transforms customer support using Calendly
+                </p>
+                <button class="imageCard-button">
+                  <span>Read now </span>
+                  <i class="material-icons"> arrow_forward</i>
+                </button>
+              </div>
+            </a>
+            <a href="" class="imageCard imagecard2">
+              <img
+                src="https://images.ctfassets.net/k0lk9kiuza3o/3H4ehRrQVJHg9PvANNxi28/0626149019f3782a20af6c76fa63e8dd/atlassian-card-image.png?q=85&fm=webp"
+                alt="ReportCardImage"
+              />
+
+              <div class="imageCardDescription">
+                <p class="imageCard-title">customer story</p>
+                <p class="imageCard-details">Atlassian boosts customer scheduling experience, security, and collaboration</p>
+                <button class="imageCard-button">
+                  <span>Read now </span>
+                  <i class="material-icons"> arrow_forward</i>
+                </button>
+              </div>
+            </a>
+            <a href="" class="imageCard imagecard2">
+              <img
+                src="https://images.ctfassets.net/k0lk9kiuza3o/1JtkVCw38p37peD7T53ORU/72f5e2b9625694f20864ff2dcdd0cdaf/mike-morse-law-firm-card-image.png?q=85&fm=webp"
+              />
+
+              <div class="imageCardDescription">
+                <p class="imageCard-title">customer story</p>
+                <p class="imageCard-details">
+                  How Calendly Revolutionized Mike Morse Law Firm
+                </p>
+                <button class="imageCard-button">
+                  <span>Read now </span>
+                  <i class="material-icons"> arrow_forward</i>
+                </button>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="ebooks" id="blog">
+          <div class="ebook-title-page-no">
+            <div class="ebook-title">
+              <h4>Blog</h4>
+            </div>
+            <div class="page-no">
+              <span class="curr-page">1 </span>
+              <span class="total-pages"> / 83</span>
+              <i class="material-icons"> arrow_forward</i>
+            </div>
+          </div>
+          <div class="image-card-content">
+            <a href="" class="imageCard imagecard2">
+              <img
+                src="https://images.ctfassets.net/k0lk9kiuza3o/5KlrRL9ABEzrjdI7rWQUa3/85d735273ed6614531cb7e88c18f821a/Calendly-blog-Best_recruiting_software_for_2024.png?q=85&fm=webp"
+                alt="E-Book"
+              />
+
+              <div class="imageCardDescription">
+                <p class="imageCard-title">blog</p>
+                <p class="imageCard-details">
+                  Best recruiting software for 2024: A buyer’s guide
+                </p>
+                <button class="imageCard-button">
+                  <span>Read now </span>
+                  <i class="material-icons"> arrow_forward</i>
+                </button>
+              </div>
+            </a>
+            <a href="" class="imageCard imagecard2">
+              <img
+                src="https://images.ctfassets.net/k0lk9kiuza3o/29hfxAUOklZxYcirsFGJut/35a682bae4760b97cd7b3ab29b24b399/Calendly_Dynamics_Hero__1_.png?q=85&fm=webp"
+                alt="ReportCardImage"
+              />
+
+              <div class="imageCardDescription">
+                <p class="imageCard-title">blog</p>
+                <p class="imageCard-details">Connect Calendly with Microsoft Dynamics 365 via Power Automate</p>
+                <button class="imageCard-button">
+                  <span>Read now </span>
+                  <i class="material-icons"> arrow_forward</i>
+                </button>
+              </div>
+            </a>
+            <a href="" class="imageCard imagecard2">
+              <img
+                src="https://images.ctfassets.net/k0lk9kiuza3o/4ZfnkIJ8QeBjl3NJhgZhimogImage/0837391af53f3bb7a44e0862ffb6f36f/Calendly_vs_GoogleCal_OG.png?q=85&fm=webp"
+              />
+
+              <div class="imageCardDescription">
+                <p class="imageCard-title">blog</p>
+                <p class="imageCard-details">
+                  Calendly vs Google Calendar … or both?
+                </p>
+                <button class="imageCard-button">
+                  <span>Read now </span>
+                  <i class="material-icons"> arrow_forward</i>
+                </button>
+              </div>
+            </a>
+          </div>
+        </div>
+     
     </section>
-    <section></section>
+
     <section></section>
     <section></section>
   </body>
