Added sticky headbar and hide scrollbars in pricing table. Made the pricing table header sticky at the top. Hid scrollbars in the pricing table wrapper for a cleaner look.

--- a/Manish/pricing.html
+++ b/Manish/pricing.html
@@ -1002,6 +1002,41 @@
         </div>
 
     </section>
+
+    <script>
+        // var stickyHeader = document.querySelector('.pricing-table');
+        // var content = document.querySelector('pricing-table-wrapper');
+
+        // window.addEventListener('scroll', function () {
+        //     var contentBottom = content.offsetTop + content.clientHeight;
+        //     var scrollPosition = window.scrollY;
+
+        //     if (scrollPosition > contentBottom) {
+        //         // Scroll position is beyond the content, hide the sticky header
+        //         stickyHeader.style.opacity = '0';
+        //     } else {
+        //         // Scroll position is within or above the content, show the sticky header
+        //         stickyHeader.style.opacity = '1';
+        //     }
+        // });
+
+        //     document.addEventListener("DOMContentLoaded", function() {
+        //         var pricingTable = document.querySelector('.pricing-table');
+        //         var pricingTableWrapper = document.getElementById('pricing-table-wrapper');
+
+        //         pricingTableWrapper.addEventListener('scroll', function() {
+        //             // Check if the scroll position of the pricingTableWrapper is greater than its height
+        //             var bookingElement = document.getElementById('faq-section');
+        //             if (bookingElement) {
+        //             if (pricingTableWrapper.scrollTop > 0) {
+        //                 pricingTable.classList.add('hidden');
+        //             } else {
+        //                 pricingTable.classList.remove('hidden');
+        //             }
+        //         }
+        //         });
+        //     });
+    </script>
 </body>
 
 </html>
