updating the main page

--- a/ajay/index.html
+++ b/ajay/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="styel.css">
     <!-- Option 1: Include in HTML -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <Style>
 
     </Style>
@@ -121,7 +123,7 @@
 
     <div id="video">
         <video autoplay loop muted>
-            <source src="D:\Geekster\Major\ajay\major.mp4">
+            <source src="./major.mp4">
 
             Your browser does not support the video tag.
         </video>
@@ -130,43 +132,43 @@
     <div id="simplefied">
         <p>Simplified scheduling for more than<b> 20 million</b> users worldwide</p>
     </div>
+    <marquee behavior="scrroll" direction="">
+        <div id="rotating">
+            <img src="https://images.ctfassets.net/k0lk9kiuza3o/4AUQ47IN6ZBtXtWXt65L3D/0e998b1376e2e3b2fc5489cfa7b3f11c/Zendesk_wordmark__1_.svg"
+                alt="">
 
-    <div id="rotating">
-        <img src="https://images.ctfassets.net/k0lk9kiuza3o/4AUQ47IN6ZBtXtWXt65L3D/0e998b1376e2e3b2fc5489cfa7b3f11c/Zendesk_wordmark__1_.svg"
-            alt="">
+            <img src="https://images.ctfassets.net/k0lk9kiuza3o/1Q5BQTaWAplnUICA96OWOw/be456a6b21b030de107077f2155ce467/Vector__22_.svg"
+                alt="">
 
-        <img src="https://images.ctfassets.net/k0lk9kiuza3o/1Q5BQTaWAplnUICA96OWOw/be456a6b21b030de107077f2155ce467/Vector__22_.svg"
-            alt="">
-
-        <img src="https://images.ctfassets.net/k0lk9kiuza3o/6fo1ntHspDIwlAN45IgxRU/8a88fd5d7b8e91bf7ca03f1ee8a44ca2/Vector__2_.svg"
-            alt="">
-
-
-        <img src="https://images.ctfassets.net/k0lk9kiuza3o/Y595RQBDR1fW5blQZfd9l/f34b8ee5d40aa13af7b0fb015e86e8d3/Vector__19_.svg"
-            alt="">
-
-        <img src="https://images.ctfassets.net/k0lk9kiuza3o/6PFPRWMRMxRXthyXYcDRiR/6f26aaf48346fb5dfa8318bb4a403e02/Compass__2_.svg"
-            alt="">
-        <img src="https://images.ctfassets.net/k0lk9kiuza3o/42drnxHfXrNOGKnVE9iA3r/7a7cf32f65bd03e0d1d48a6b02bde3d5/Loreal__1_.svg"
-            alt="">
-        <img src="https://images.ctfassets.net/k0lk9kiuza3o/4AUQ47IN6ZBtXtWXt65L3D/0e998b1376e2e3b2fc5489cfa7b3f11c/Zendesk_wordmark__1_.svg"
-            alt="">
-
-        <img src="https://images.ctfassets.net/k0lk9kiuza3o/1Q5BQTaWAplnUICA96OWOw/be456a6b21b030de107077f2155ce467/Vector__22_.svg"
-            alt="">
-
-        <img src="https://images.ctfassets.net/k0lk9kiuza3o/6fo1ntHspDIwlAN45IgxRU/8a88fd5d7b8e91bf7ca03f1ee8a44ca2/Vector__2_.svg"
-            alt="">
+            <img src="https://images.ctfassets.net/k0lk9kiuza3o/6fo1ntHspDIwlAN45IgxRU/8a88fd5d7b8e91bf7ca03f1ee8a44ca2/Vector__2_.svg"
+                alt="">
 
 
-        <!-- <img src="https://images.ctfassets.net/k0lk9kiuza3o/Y595RQBDR1fW5blQZfd9l/f34b8ee5d40aa13af7b0fb015e86e8d3/Vector__19_.svg"
+            <img src="https://images.ctfassets.net/k0lk9kiuza3o/Y595RQBDR1fW5blQZfd9l/f34b8ee5d40aa13af7b0fb015e86e8d3/Vector__19_.svg"
                 alt="">
 
             <img src="https://images.ctfassets.net/k0lk9kiuza3o/6PFPRWMRMxRXthyXYcDRiR/6f26aaf48346fb5dfa8318bb4a403e02/Compass__2_.svg"
                 alt="">
             <img src="https://images.ctfassets.net/k0lk9kiuza3o/42drnxHfXrNOGKnVE9iA3r/7a7cf32f65bd03e0d1d48a6b02bde3d5/Loreal__1_.svg"
-                alt=""> -->
-        <!-- <img src="https://images.ctfassets.net/k0lk9kiuza3o/4AUQ47IN6ZBtXtWXt65L3D/0e998b1376e2e3b2fc5489cfa7b3f11c/Zendesk_wordmark__1_.svg"
+                alt="">
+            <img src="https://images.ctfassets.net/k0lk9kiuza3o/4AUQ47IN6ZBtXtWXt65L3D/0e998b1376e2e3b2fc5489cfa7b3f11c/Zendesk_wordmark__1_.svg"
+                alt="">
+
+            <img src="https://images.ctfassets.net/k0lk9kiuza3o/1Q5BQTaWAplnUICA96OWOw/be456a6b21b030de107077f2155ce467/Vector__22_.svg"
+                alt="">
+
+            <img src="https://images.ctfassets.net/k0lk9kiuza3o/6fo1ntHspDIwlAN45IgxRU/8a88fd5d7b8e91bf7ca03f1ee8a44ca2/Vector__2_.svg"
+                alt="">
+
+
+            <img src="https://images.ctfassets.net/k0lk9kiuza3o/Y595RQBDR1fW5blQZfd9l/f34b8ee5d40aa13af7b0fb015e86e8d3/Vector__19_.svg"
+                alt="">
+
+            <img src="https://images.ctfassets.net/k0lk9kiuza3o/6PFPRWMRMxRXthyXYcDRiR/6f26aaf48346fb5dfa8318bb4a403e02/Compass__2_.svg"
+                alt="">
+            <img src="https://images.ctfassets.net/k0lk9kiuza3o/42drnxHfXrNOGKnVE9iA3r/7a7cf32f65bd03e0d1d48a6b02bde3d5/Loreal__1_.svg"
+                alt="">
+            <img src="https://images.ctfassets.net/k0lk9kiuza3o/4AUQ47IN6ZBtXtWXt65L3D/0e998b1376e2e3b2fc5489cfa7b3f11c/Zendesk_wordmark__1_.svg"
                 alt="">
 
             <img src="https://images.ctfassets.net/k0lk9kiuza3o/1Q5BQTaWAplnUICA96OWOw/be456a6b21b030de107077f2155ce467/Vector__22_.svg"
@@ -182,17 +184,18 @@
             <img src="https://images.ctfassets.net/k0lk9kiuza3o/6PFPRWMRMxRXthyXYcDRiR/6f26aaf48346fb5dfa8318bb4a403e02/Compass__2_.svg"
                 alt="">
             <img src="https://images.ctfassets.net/k0lk9kiuza3o/42drnxHfXrNOGKnVE9iA3r/7a7cf32f65bd03e0d1d48a6b02bde3d5/Loreal__1_.svg" -->
-        <!-- alt=""> -->
+            <!-- <!-- alt=""> -->
 
 
 
-    </div>
+        </div>
+    </marquee>
     <br>
     <br>
-    <div id="smarter">
+    <div id="smarter" data-aos="fade-up">
         <h1>Smarter scheduling for teams <br>who conduct meetings at scale</h1>
     </div>
-    <div id="slaesnav">
+    <div id="slaesnav" data-aos="fade-up">
         <div id="salesnav1"> <b> <a href="" class="first">Sales</a></b></div>
         <div id="salesnav2"> <b><a href="">Marketing</a></b></div>
         <div id="salesnav3"> <b><a href="">Customer Success</a></b></div>
@@ -202,7 +205,7 @@
 
     </div>
     <br>
-    <div id="sales">
+    <div id="sales" data-aos="fade-up">
         <div id="right">
             <div id="book">
                 <div id="drive">
@@ -246,7 +249,7 @@
 
 
 
-    <div id="abovelogo">
+    <div id="abovelogo" data-aos="fade-up">
         <div id="sync">
             <h1>Stay in sync from any <br>app, on any device</h1>
         </div>
@@ -259,7 +262,7 @@
         </div>
 
     </div>
-    <div id="logo1">
+    <div id="logo1" data-aos="fade-right">
         <div id="logo1a">
             <img src="https://www.svgrepo.com/show/452140/zoom.svg" alt="">
         </div>
@@ -294,7 +297,7 @@
     </div>
     <br>
 
-    <div id="logo2">
+    <div id="logo2" data-aos="fade-right">
         <div id="logo2a">
             <img src="https://www.liblogo.com/img-logo/max/hu1925ha24-hubspot-logo-hubspot-logo-logos-icon-free-download-on-iconfinder.png"
                 alt="">
@@ -322,15 +325,75 @@
         <div id="logo2d"><img src="https://cdn.pixabay.com/photo/2018/05/08/21/29/paypal-3384015_1280.png" alt=""></div>
     </div>
     <br><br>
-    <br><br>
-    <br><br>
-    <br><br>
-    <br><br>
-    <br><br>
-    <br><br>
-    <br><br>
-    <br><br>
-    <br><br>
+    <div id="together">
+        <h1>We make scheduling easier than <br> ever for you</h1>
+        <div id="Meeting">
+            <div id="meeting1">
+                <h2>Share your meeting <br> availability</h2>
+                <div id="meeting1a">
+                    <h3>Accurate, real time scheduling</h3>
+                </div>
+                <p>Grow your business with scheduling automation. Simply <br> email, text, or add your Calendly
+                    availability to your <br> website – and watch prospects and recruits book <br> high-value meetings
+                    with you.</p>
+                <div id="learnmore3">
+                    <a href="">Learn more</a>
+                    <i class="material-icons">arrow_forward</i>
+
+                </div>
+            </div>
+            <div id="meeting2">
+                <img src="https://images.ctfassets.net/k0lk9kiuza3o/7mkknkKmPsEGwaB5mdt60t/f6a386c1a8c4944b51aae8b3b1fa607f/Calendly-Email-Embed-Recruiting.png?q=85&fm=webp"
+                    alt="">
+            </div>
+
+        </div>
+        <div id="Meeting">
+            <div id="meeting1">
+                <h2>Schedule as a team</h2>
+                <div id="meeting1a">
+                    <h3>Multi-person automated scheduling</h3>
+                </div>
+                <p>Calendly adapts to both you and your team's <br> scheduling preferences. Co-host a client call with a
+                    <br> colleague, email reminders and follow-ups, and <br> integrate everything with your preferred
+                    software tools.</p>
+                <div id="learnmore3">
+                    <a href="">Learn more</a>
+                    <i class="material-icons">arrow_forward</i>
+
+                </div>
+            </div>
+            <div id="meeting2">
+                <img src="https://images.ctfassets.net/k0lk9kiuza3o/6XqS7MbsZB4a08zAUxOHde/033649d82a01b51bbc080b037aac0206/Calendly-Round-Robin.png?q=85&fm=webp"
+                    alt="">
+            </div>
+
+        </div>
+
+        <div id="Meeting">
+            <div id="meeting1">
+                <h2>Hit your number</h2>
+                <div id="meeting1a">
+                    <h3>Build your competitive advantage</h3>
+                </div>
+                <p>High-value meetings are the lifeblood of your business. <br> Increase revenue, retain customers, and
+                    land recruits <br> with the #1 scheduling automation platform.</p>
+                <div id="learnmore3">
+                    <a href="">Learn more</a>
+                    <i class="material-icons">arrow_forward</i>
+
+                </div>
+            </div>
+            <div id="meeting2">
+                <img src="https://images.ctfassets.net/k0lk9kiuza3o/3UTfYq4aYOmCSyynLLHo2U/817015779bcd9c3336166eae2120cd8e/Calendly-Graph.png?q=85&fm=webp"
+                    alt="">
+            </div>
+
+        </div>
+
+
+
+    </div>
     <br><br>
     <div id="see">
         <h1>See Calendly in action</h1>
@@ -342,25 +405,144 @@
 
         </div>
     </div>
-    <div id="video2">
+    <div id="video2" data-aos="fade-up">
         <video controls muted
             poster="https://embed-ssl.wistia.com/deliveries/d724379ea2daf33bbf1e1dbfb4ec1a6a.webp?image_crop_resized=1920x1080"
             width="1200px">
-            <source src="D:\MajorProject\ajay\major.mp4">
+            <source src="./major.mp4">
 
             Your browser does not support the video tag.
         </video>
 
     </div>
     <br>
+    <div id="company" data-aos="fade-up">
+        <div id="dc">
+            <div id="discover">
+                <h1>Discover how businesses <br>grow with Calendly</h1>
+            </div>
+            <div id="customer">
+                <p>Learn how teams of all sizes are using Calendly’s scheduling <br> automation platform to create
+                    value.</p>
+                <div id="stories">
+                    <a href="">View  customer stories</a>
+                    <i class="material-icons">arrow_forward</i>
+
+                </div>
+            </div>
+        </div>
+        <div id="cimage">
+            <div id="cimage1"><img
+                    src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSnMZJMLuVDr2lqaVEKgJivHq7eP4QA8nKgbA7W4dnMAoNJ7Ckn"
+                    alt=""></div>
+            <div id="cimage2"><img
+                    src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTvkoRl5MVut0Vx7lweb_aH2Aw3mSjrg2DelWKucZq5k5lR8ssv"
+                    alt=""></div>
+            <div id="cimage3"><img
+                    src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTiAJ1vGrIdlf7hxwQOlLXHAEqh3L0qVvjMKBIWreDg5QYBpmsI"
+                    alt=""></div>
+            <div id="cimage4"><img
+                    src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcRrLPAvsjX9v-F4hFfnBn7CK7FkCB6_GeDUCMZJa3_J8LBaHq1U"
+                    alt=""></div>
+            <div id="cimage3"><img
+                    src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcQbhkJMFU16eM6GhTq1s2esuZKdi4_6RuHZCZy_4GC5c7E1N-Zk"
+                    alt=""></div>
+            <div id="cimage5"><img
+                    src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTgW0SF7hjIqem3mtm3SRblntFzuMdgrAA8o5uMNwHszF2gV121"
+                    alt=""></div>
+        </div>
+        <div id="percentage">
+            <div id="percentage1">
+                <h1>26%</h1>
+                <h2>increase in website bookings</h2>
+
+                <hr>
+                <div id="story">
+                    <a href="">Read full customer story</a>
+                    <i class="material-icons">arrow_forward</i>
+
+                </div>
+            </div>
+            <div id="percentage1">
+                <h1>20%</h1>
+                <h2>more sales meetings held</h2>
+
+                <hr>
+            </div>
+
+            <div id="percentage1">
+                <h1>360%</h1>
+                <h2>increase in partner calls</h2>
+                <hr>
+            </div>
+
+        </div>
+
+    </div>
     <br>
     <br>
+    <div id="iso" data-aos="fade-up">
+
+        <span>New </span>
+        <small>iso-27001 Certification</small>
+        <i class="material-icons">arrow_forward</i>
+    </div>
     <br>
     <br>
+    <div id="organization" data-aos="fade-up">
+        <h1>Built to keep your organization secure</h1>
+    </div>
     <br>
     <br>
+    <div id="isi">
+        <div id="isiimg"><img
+                src="https://marketing-assets.calendly.com/media/experimentImages/award-banner-v1/Security-SOC.png"
+                alt=""></div>
+        <div id="isiimg"><img
+                src="https://marketing-assets.calendly.com/media/experimentImages/award-banner-v1/Security-DSS.png"
+                alt=""></div>
+        <div id="isiimg"><img
+                src="https://marketing-assets.calendly.com/media/experimentImages/award-banner-v1/Security-GDPR.png"
+                alt=""></div>
+        <div id="isiimg"><img
+                src="https://marketing-assets.calendly.com/media/experimentImages/award-banner-v1/Security-CCPA.png"
+                alt=""></div>
+        <div id="isiimg"><img
+                src="https://marketing-assets.calendly.com/media/experimentImages/award-banner-v1/Security-Star.png"
+                alt=""></div>
+        <div id="isiimg"><img
+                src="https://marketing-assets.calendly.com/media/experimentImages/award-banner-v1/Sercurity-ISO-27001.png"
+                alt=""></div>
+    </div>
     <br>
     <br>
+
+    <div id="keep" data-aos="fade-up">
+        <p>Keep your scheduling data secure with enterprise-grade admin management, security <br> integrations, data
+            governance, compliance audits, and privacy protections.</p>
+    </div>
+    <br>
+
+    <div id="learnmore2" data-aos="fade-up">
+        <a href="">Learn more</a>
+        <i class="material-icons">arrow_forward</i>
+
+    </div>
+    <br>
+    <div id="power">
+        <div data-aos="fade-up">
+            <h1>Power up your scheduling</h1>
+            <p>Get started with the world's leading Scheduling Automation Platform in seconds – <br> for free.</p>
+            <div id="talk">
+                <div id="signup">
+                    <button value="Sign up for freee" id="button1">Sign up for free</button>
+                </div>
+                <div id="talksale">
+                    <button value="Talk to sales" id="button2">Talk to sales</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <br>
     <br>
     <footer>
@@ -502,6 +684,10 @@
                 nav.classList.remove("sticky");
             }
         }
+    </script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
     </script>
 </body>
 
