last page added

--- a/Avishek/index.html
+++ b/Avishek/index.html
@@ -299,6 +299,29 @@
             </div>
         </div>
         <h1>Designed to speed up sales cycles for teams just like yours</h1>
+
+        <div class="design">
+            <div class="des_txt">
+                <div class="icon">
+                    <svg><use fill="#006BFF" href="/media/icons/brand-shapes.svg#filled-3d-19"></use></svg>
+                </div>
+                <span>Drive more revenue</span>
+                <p>Book high-value meetings in seconds and turn scheduling into a competitive advantage.</p>
+            </div>
+            <div class="des_img">
+                <img src="Calendly-Sales-Small-new_io.webp" alt="">
+            </div>
+        </div>
+
+        <div class="last">
+            <div class="lst_txt">
+                <h1>Ready to close more deals?</h1>
+                <p>Get instant access to all of these features and more, so you can schedule meetings without the back-and-forth.</p>
+            </div>
+            <div class="lst_bttn">
+                <a href="">Get a demo</a>
+            </div>
+        </div>
     </div>
 
 
